# pikuli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
pikuli/: File.py  Location.py  Match.py  Pattern.py  Region.py  Screen.py  SettingsClass.py  UIA.py  Vector.py  _LoggerClass.py  _SettingsClass.py  __init__ (Nikita V's conflicted copy 2016-01-27).py  __init__.py  _exceptions.py  _functions.py  _helpers.py  _logger.py  _settings_class.py  cv_element.py  hwnd_element.py  logger.py  mouse_cursor.py  oleacc_h.py  ui_element.py  uia_element.py  utils.py  winforms (Nikita V's conflicted copy 2016-01-27).py  winforms.py
pikuli/cv/: __init__.py  file.py  match.py  pattern.py  region_cv_methods.py  screen.py
pikuli/geom/: __init__.py  location.py  region.py  simple_types.py  vector.py
pikuli/hwnd/: __init__.py  hwnd_element.py
pikuli/input/: __init__.py  constants.py  helper_types.py  input_emulator.py  keys.py  platform_init.py
pikuli/input/linux_evdev/: dumpkeys_f.txt  dumpkeys_l.txt  input_emulator.py
pikuli/input/linux_gtk3/: clipboard.py  input_emulator.py  xmodmap_pk.txt
pikuli/input/linux_x11/: clipboard.py  input_emulator.py
pikuli/input/windows/: clipboard.py  input_emulator.py
pikuli/uia/: __init__.py  exceptions.py  pattern.py  pattern_method.py  settings.py  uia_element.py
pikuli/uia/adapter/: __init__.py  adapter.py  adapter_base.py  helper_types.py  identifer_names.py  identifiers.py  oleacc_h.py  pattern_description.py  patterns_plain_description.py  platform_init.py  property_value_converter.py  (+2 more)
(+75 files in other folders)
